[blanktheme] Removed overflow of the main container due a kind of bug with some contents
git-svn-id: https://code.zikula.org/svn/blanktheme/trunk/themes@306 60a32485-07e5-4ee0-b02d-8fa6578692ca

--- a/blanktheme/style/screen/basemod.css
+++ b/blanktheme/style/screen/basemod.css
@@ -104,7 +104,6 @@
 
       /* content wrapper */      
       #main {
-        overflow: hidden;
         padding: 1em 0;
       }
 
